[gd_scene load_steps=8 format=3 uid="uid://dygb2wkkanw1i"]

[ext_resource type="Script" path="res://Level/level.gd" id="1_k6lt7"]
[ext_resource type="PackedScene" uid="uid://bdv2qatpoc5q7" path="res://Player/Player.tscn" id="2_2ef83"]
[ext_resource type="Script" path="res://camera/camera_follow.gd" id="3_jkbsj"]
[ext_resource type="Script" path="res://Level/level_generation.gd" id="3_qjyve"]
[ext_resource type="PackedScene" uid="uid://nl1uiftrpq1y" path="res://bubble/bubble.tscn" id="5_3huaf"]

[sub_resource type="Environment" id="Environment_kwgv6"]
ambient_light_color = Color(0.95158, 0.95158, 0.95158, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_an1ul"]

[node name="Level" type="Node3D"]
process_mode = 3
script = ExtResource("1_k6lt7")
player_scene = ExtResource("2_2ef83")
proc_gen = true

[node name="lblIP" type="Label" parent="."]
offset_left = 8.0
offset_top = 617.0
offset_right = 72.0
offset_bottom = 640.0
text = "LocalIP: "

[node name="btnHost" type="Button" parent="."]
offset_left = 561.0
offset_top = 609.0
offset_right = 605.0
offset_bottom = 640.0
text = "Host"

[node name="btnJoin" type="Button" parent="."]
offset_left = 609.0
offset_top = 609.0
offset_right = 647.0
offset_bottom = 640.0
text = "Join"

[node name="txtJoin" type="TextEdit" parent="."]
offset_left = 654.0
offset_top = 609.0
offset_right = 887.0
offset_bottom = 639.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/Player.tscn")
spawn_path = NodePath("..")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0993019, 0.995057, 0, -0.995057, 0.0993019, 0, 19.3669, 0.396319)
script = ExtResource("3_jkbsj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kwgv6")

[node name="level_generator" type="Node" parent="."]
script = ExtResource("3_qjyve")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_an1ul")

[node name="static" type="Node" parent="."]

[node name="Bubble" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0893316, 0, -5.4958)

[node name="Bubble2" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0893316, 0, -0.974856)

[node name="Bubble3" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0893316, 0, 2.89648)

[node name="Bubble4" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.0318, 0, 2.89648)

[node name="Bubble5" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.0318, 0, -1.51147)

[node name="Bubble6" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.0318, 0, -5.70579)

[node name="Bubble7" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.19458, 0, -5.70579)

[node name="Bubble8" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.19458, 0, -1.32922)

[node name="Bubble9" parent="." instance=ExtResource("5_3huaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.19458, 0, 3.09319)

[connection signal="pressed" from="btnHost" to="." method="_on_btn_host_pressed"]
[connection signal="pressed" from="btnJoin" to="." method="_on_btn_join_pressed"]
